--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- H2内存数据库用于测试 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- 添加 PageHelper 依赖 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -85,6 +92,13 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
