--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://172.16.32.93/postgres
-
-
-
+    url: jdbc:postgresql://test-db-postgresql.ns-1msrmvr9.svc:5432/postgres
     username: postgres
-    password: 123456
+    password: 7w6mlhvv
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -55,4 +52,4 @@ pagehelper:
 # 自定义配置
 stock:
   page:
-    size: 9  # 每页显示9只股票的数据 
+    size: 9  # 每页显示9只股票的数据
