--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://test-db-postgresql.ns-1msrmvr9.svc:5432/postgres
+    url: jdbc:postgresql://25.tcp.cpolar.top:11324/postgres
     username: postgres
-    password: 7w6mlhvv
+    password: 123456
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
